deploy/k8s/minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: podwise
  labels:
    app: minio                  
    monitoring: minio           
spec:
  type: NodePort
  ports:
    - name: http                
      port: 9000
      targetPort: 9000
      nodePort: 30090
    - name: console
      port: 9001
      targetPort: 9001
      nodePort: 30091
  selector:
    app: minio
